avoid calling BinaryUtil.toHexString() to speed up