@@ -17,6 +17,7 @@ apply plugin: 'org.junit.platform.gradle.plugin'
 
 mainClassName = 'EmulatorRunner'
 
+applicationDefaultJvmArgs = ["-Xverify:none"]
 //applicationDefaultJvmArgs = ["-XX:+UnlockCommercialFeatures","-XX:+FlightRecorder", "-XX:StartFlightRecording=duration=30s,filename=em.jfr"]
 
 dependencies {
